2018-04-24  Karen   <cerebrum@gagarin.uit.no>

    * populate_fronter_groups.py: Minor tidy up. Removed reference to make_fs() as it is not used.

2018-04-18    <cerebrum@gagarin.uit.no>

	* process_uit_email.py (calculate_uit_emails): Rewrote how to
	check for timelonnet. the previous check did not work as intended
	if a person had more than 1 affiliation to an ou where one of the affiliations had timelonnet status

2018-04-17    <cerebrum@gagarin.uit.no>

	* process_uit_email.py (calculate_uit_emails): Rewrote how we
	decide who gets cnaddr email address. The new solution only
	collects valid/current person affiliation and uses that as its
	basis on who gets what. the old solution also collected expired
	person affiliatiosn which didnt scale all that well.

2018-04-16    <cerebrum@gagarin.uit.no>

	* account_affiliation_cleaner.py (clean_acc_affs): Script changed to NOT delete the last account_type for an account. Even closed accounts will
	have at least 1 account_type, even if it is no longer valid. this was done because process_students was unable to activate an old account
	if said account had lost all its account_types.

2018-04-05  Karen   <cerebrum@gagarin.uit.no>

    * export_cristin.py: Commented out unnecessary prints.

2018-03-23    <cerebrum@gagarin.uit.no>

	* import_tlf.py (process_telefoni): the script will now continue with next user, if a username is encountered in the import file (from cmg) and is missing in the database. until now, the script would crash with a keyerror

2018-03-14    <cerebrum@gagarin.uit.no>

	* export_ad.py (ad_export.build_xml): This script will now also
	export new contact data from the account object (and not only on the
	person object). Additionally, the following check is performed: if
	the account objects containts a new contact value, but from the
	same source and type as the person object, the account object
	contact value will superseede the value from the person object.